@@ -43,8 +43,8 @@ module Fairy
 ##CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 10000
   CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 160000
 ##CONF.POOLQUEUE_POOL_THRESHOLD = 1000
-  CONF.POOLQUEUE_POOL_THRESHOLD = 32000
-  CONF.ONMEMORY_SIZEDQUEUE_SIZE = 64000
+  CONF.POOLQUEUE_POOL_THRESHOLD = 64000
+  CONF.ONMEMORY_SIZEDQUEUE_SIZE = 16000
 ##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 
 ##CONF.BARRIER_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
@@ -52,6 +52,7 @@ module Fairy
 
 ##CONF.N_MOD_GROUP_BY = 5
 #CONF.HASH_MODULE = "fairy/share/hash-rb18"
+#CONF.HASH_MODULE = "fairy/share/hash-1"
 ##CONF.HASH_MODULE = "fairy/share/hash-md5"
 ##CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :OnMemoryBuffer}
 #CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :MergeSortBuffer}
