@@ -1,3 +1,8 @@
+Thu May 28 19:36:53 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* each-substream-mapper.rb: mapfちょっと最適化にバグがあった
+	* port.rb: Export#push_buf 追加
+
 Wed May 27 17:32:45 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* each-substream-mapper.rb: mapfちょっと最適化
